--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 <!-- Achivement pic-->
 <h1><b> <center>Achivement of Tahsan Rahman Khan</center> </b></h1>
 <center>
-  <img src="../img/344676788887878.gif" alt="" height="350px" >
-<img src="../img/tah-2002140645.jpeg" alt="" height="350px" >
-<img src="../img/DS-6--19-05-2021.jpg" alt=""alt="" height="350px" >
-<img src="../img/132329_170.jpg" alt=""alt="" height="350px" >
+  <img src="./img/344676788887878.gif" alt="" height="350px" >
+<img src="./img/tah-2002140645.jpeg" alt="" height="350px" >
+<img src="./img/DS-6--19-05-2021.jpg" alt=""alt="" height="350px" >
+<img src="./img/132329_170.jpg" alt=""alt="" height="350px" >
 </center>     
 
 <br>
